# AI_stack

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  aim.md  mkdocs.yml  pyproject.toml
docs/: further-reading.md  glossary.md  index.md
docs/agents/: evaluation.md  index.md  memory.md  multi-agent.md  planning.md  tool-use.md
docs/evaluation/: benchmarks.md  calibration.md  human-eval.md  index.md  llm-as-judge.md  regression-testing.md
docs/explainability/: concept-based.md  counterfactuals.md  evaluation.md  example-based.md  feature-attribution.md  index.md  limitations.md  llm-explainability.md  shap-lime.md
docs/fine-tuning/: data-curation.md  index.md  lora.md  reward-modeling.md  rlhf.md  sft.md
docs/fundamentals/: index.md
docs/getting-started/: first-agent.md  first-llm-call.md  first-rag.md  index.md  install.md
docs/inference/: batching.md  hardware.md  index.md  kv-cache.md  quantization.md  serving.md  speculative-decoding.md
docs/interpretability/: activation-patching.md  basics.md  circuits.md  feature-visualization.md  for-safety.md  index.md  linear-probes.md  open-problems.md  sparse-autoencoders.md  superposition.md  tools.md
docs/landmark/: benchmarks.md  books.md  datasets.md  index.md  models.md  papers.md
docs/paths/: index.md
docs/production/: caching.md  cost.md  index.md  latency.md  logging.md  observability.md  rollback.md  shadow-traffic.md  versioning.md
docs/prompting/: basics.md  cot.md  few-shot.md  index.md  prompt-engineering-mlops.md  prompt-injection.md  structured-outputs.md
docs/rag/: chunking.md  (+6 more)
(+126 files in other folders)
