[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_handbook"
version = "0.1.0"
description = "AIStack — open handbook for AI engineering."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "AIStack contributors" }]
keywords = ["ai", "llm", "rag", "agents", "fine-tuning", "evaluation", "mlops"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
llm = [
  "anthropic>=0.40",
  "openai>=1.40",
  "tiktoken>=0.7",
]
rag = [
  "sentence-transformers>=3",
  "chromadb>=0.5",
  "rank-bm25>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
